--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@apollo/client": "^3.7.0",
     "graphql": "^16.6.0",
     "react": "18.1.0",
-    "react-native": "0.70.3"
+    "react-native": "0.70.3",
+    "react-native-fast-image": "^8.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
